2008-09-19  Tom Tromey  <tromey@redhat.com>

	* tree.c (tree_range_check_failed): Use 'int' to iterate.
	(omp_clause_range_check_failed): Likewise.
	(build_common_builtin_nodes): Likewise.
	* sel-sched.c (init_hard_regs_data): Use 'int' to iterate.
	* regclass.c (cannot_change_mode_set_regs): Use 'int' to iterate.
	(invalid_mode_change_p): Likewise.
	* passes.c (finish_optimization_passes): Use 'int' to iterate.
	* ira.c (setup_class_subset_and_memory_move_costs): Use 'int' to
	iterate.
	(setup_cover_and_important_classes): Likewise.
	(setup_class_translate): Likewise.
	(setup_reg_class_nregs): Likewise.
	(ira_init_once): Likewise.
	(free_register_move_costs): Likewise.
	* gimple.c (gimple_range_check_failed): Use 'int' to iterate.

2008-09-17  Tom Tromey  <tromey@redhat.com>

	* ipa-reference.c (pass_ipa_reference): Fix struct tag.
	* ipa-pure-const.c (pass_ipa_pure_const): Fix struct tag.
	* ipa-cp.c (pass_ipa_cp): Fix struct tag.
	* except.c (add_call_site): Fix struct tag.
	* tree-pass.h (pass_ipa_cp, pass_ipa_reference,
	pass_ipa_pure_const): Fix struct tag.

2008-09-17  Tom Tromey  <tromey@redhat.com>

	* cfgrtl.c (pass_free_cfg): Use TV_NONE.
	* tree-vectorizer.c (pass_ipa_increase_alignment): Use TV_NONE.
	* tree-vect-generic.c (pass_lower_vector): Use TV_NONE.
	(pass_lower_vector_ssa): Likewise.
	* tree-tailcall.c (pass_tail_recursion): Use TV_NONE.
	(pass_tail_calls): Likewise.
	* tree-stdarg.c (pass_stdarg): Use TV_NONE.
	* tree-ssanames.c (pass_release_ssa_names): Use TV_NONE.
	* tree-ssa-math-opts.c (pass_cse_reciprocals): Use TV_NONE.
	(pass_cse_sincos): Likewise.
	(pass_convert_to_rsqrt): Likewise.
	* tree-ssa-dse.c (pass_simple_dse): Use TV_NONE.
	* tree-ssa-ccp.c (pass_fold_builtins): Use TV_NONE.
	* tree-ssa.c (pass_early_warn_uninitialized): Use TV_NONE.
	(pass_late_warn_uninitialized): Likewise.
	(pass_update_address_taken): Likewise.
	* tree-ssa-alias.c (pass_reset_cc_flags): Use TV_NONE.
	(pass_build_alias): Likewise.